Language Switcher Gap Issue #443

--- a/wp-content/themes/impruwclientparent/css/less/site-elements/language-switcher.less
+++ b/wp-content/themes/impruwclientparent/css/less/site-elements/language-switcher.less
@@ -17,6 +17,7 @@
 		text-align: left;
 		ul, li {
 			min-width: 170px;
+			height: 25px;
 			ul {
 				z-index: 1;
 			}
