--- a/wp-content/themes/minimal-theme/css/theme-style.css
+++ b/wp-content/themes/minimal-theme/css/theme-style.css
@@ -1804,6 +1804,7 @@ ul.gallery {
 .lang-sel > div ul,
 .lang-sel > div li {
   min-width: 170px;
+  height: 25px;
 }
 .lang-sel > div ul ul,
 .lang-sel > div li ul {
