--- a/wp-content/themes/neon-theme/css/theme-style.css
+++ b/wp-content/themes/neon-theme/css/theme-style.css
@@ -1800,6 +1800,7 @@ ul.gallery {
 .lang-sel > div ul,
 .lang-sel > div li {
   min-width: 170px;
+  height: 25px;
 }
 .lang-sel > div ul ul,
 .lang-sel > div li ul {
