--- a/wp-content/themes/theme-diamond/css/theme-style.css
+++ b/wp-content/themes/theme-diamond/css/theme-style.css
@@ -1785,6 +1785,7 @@ ul.gallery {
 .lang-sel > div ul,
 .lang-sel > div li {
   min-width: 170px;
+  height: 25px;
 }
 .lang-sel > div ul ul,
 .lang-sel > div li ul {
